# ost-pyfat-api

./: Dockerfile  README.md  pyproject.toml
conf/: settings.toml
src/ost_pyfat_api/: main.py
src/ost_pyfat_api/api/v1/: metrics.py  root.py  tests.py
src/ost_pyfat_api/infra/: commons.py
